--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/arthur.css">
     <link rel="stylesheet" href="../styles/erick.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../styles/arthur.css">
     <title>Meus Anúncios</title>
 
     <style>
@@ -18,82 +18,36 @@
             font-family: "Open Sans", sans-serif;
         }
 
-        .carousel .item {
-            color: #747d89;
-            min-height: 325px;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .carousel .thumb-wrapper {
-            padding: 25px 15px;
-            background: #fff;
-            border-radius: 6px;
-            text-align: center;
-            position: relative;
-            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-        }
-
-        .carousel .item .img-box {
-            height: 120px;
+        .vgr-cards .card {
+            display: flex;
+            flex-flow: wrap;
+            flex: 100%;
             margin-bottom: 20px;
-            width: 100%;
+            margin-top: 20px;
+        }
+
+        .vgr-cards .card .card-img-body {
+            flex: 1;
+            overflow: hidden;
             position: relative;
         }
 
-        .carousel .item img {
-            max-width: 100%;
-            max-height: 100%;
-            display: inline-block;
-            position: absolute;
-            bottom: 0;
-            margin: 0 auto;
-            left: 0;
-            right: 0;
+        .vgr-cards .card .card-img {
+            height: 100%;
+            width: auto;
+            margin-left: 50%;
+            transform: translateX(-50%);
         }
 
-
-        .carousel-control-prev i {
-            margin-left: -2px;
+        .vgr-cards .card .card-body {
+            flex: 2;
+            padding: 0 0 0 1.25rem;
         }
 
-        .carousel-control-next i {
-            margin-right: -4px;
-        }
-
-        .carousel-indicators {
-            bottom: -50px;
-        }
-
-        .carousel-indicators li,
-        .carousel-indicators li.active {
-            width: 10px;
-            height: 10px;
-            margin: 4px;
-            border-radius: 50%;
-            border: none;
-        }
-
-        .carousel-indicators li {
-            background: rgba(0, 0, 0, 0.2);
-        }
-
-        .carousel-indicators li.active {
-            background: rgba(0, 0, 0, 0.6);
-        }
-
-        .carousel .wish-icon {
-            position: absolute;
-            right: 10px;
-            top: 10px;
-            z-index: 99;
-            cursor: pointer;
-            font-size: 16px;
-            color: #abb0b8;
-        }
-
-        .carousel .wish-icon .fa-heart {
-            color: #ff6161;
+        @media (max-width: 576px) {
+            .vgr-cards .card .card-body {
+                padding: 0;
+            }
         }
     </style>
 </head>
@@ -114,7 +68,7 @@
 
             <nav class="menu d-flex">
                 <ul class="menu-list d-flex justify-content-between align-items-center">
-                    <li class="menu-item"><a href="index.html">Inicio</a></li>
+                    <li class="menu-item"><a href="home-user.html">Inicio</a></li>
                     <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
                     <li class="menu-item"><a href="doar.html">Doar</a></li>
                     <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
@@ -131,21 +85,62 @@
 
 
     <div class="container">
-        <div>
-            <div class="card border border-primary" style="width: 15rem;">
-                <img src="../assets/529638.png" class="card-img-top" alt="Foto do produto anunciado">
+        <nav class="nav nav-tabs nav-justified mt-3 mb-3">
+            <a class="nav-link active" href="anuncios.html">Meus Anúncios</a>
+            <a class="nav-link" href="compras.html" style="color: black;">Compras</a>
+            <a class="nav-link" href="doacoes-atualizadas.html" style="color: black;">Doações</a>
+        </nav>
+        <div class="card mb-3 card-group vgr-cards">
+            <div class="card">
+                <div class="card-img-body" style="height: 167px">
+                    <img class="card-img" src="/assets/529638.png" alt="Card image cap">
+                </div>
                 <div class="card-body">
-                    <h5>Título do produto</h5>
-                    <p>Detalhes do produto</p>
-                    <a href="#" class="btn btn-primary">Ver anúncio</a>
+                    <h4 class="card-title">Nome do produto</h4>
+                    <p class="card-text">Detalhes do produto</p>
+                    <p class=""><img src="../assets/olho-icone.png" alt="Icone olho" width="20px"
+                            class="float-start mt-1 me-1">23 visualizações
+                    </p>
+                    <a href="chat-anuncios.html" class="m-1" style="color: black;"><img src="../assets/chat-icone.png"
+                            alt="Icone chat" width="20px" class="float-start">Mensagens do anúncio</a><br><br>
+                    <a href="anunciar.html" class="btn btn-primary">Editar anúncio</a>
+                    <a href="home-user.html" class="btn btn-danger">Excluir anúncio</a>
                 </div>
             </div>
-            <div>
-                
+            <div class="card">
+                <div class="card-img-body" style="height: 167px">
+                    <img class="card-img" src="/assets/529638.png" alt="Card image cap">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Nome do produto</h4>
+                    <p class="card-text">Detalhes do produto</p>
+                    <p class=""><img src="../assets/olho-icone.png" alt="Icone olho" width="20px"
+                            class="float-start mt-1 me-1">15 visualizações
+                    </p>
+                    <a href="chat-anuncios.html" class="m-1" style="color: black;"><img src="../assets/chat-icone.png"
+                            alt="Icone chat" width="20px" class="float-start">Mensagens do anúncio</a><br><br>
+                    <a href="anunciar.html" class="btn btn-primary">Editar anúncio</a>
+                    <a href="home-user.html" class="btn btn-danger">Excluir anúncio</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img-body" style="height: 167px">
+                    <img class="card-img" src="/assets/529638.png" alt="Card image cap">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Nome do produto</h4>
+                    <p class="card-text">Detalhes do produto</p>
+                    <p class=""><img src="../assets/olho-icone.png" alt="Icone olho" width="20px"
+                            class="float-start mt-1 me-1">12 visualizações
+                    </p>
+                    <a href="chat-anuncios.html" class="m-1" style="color: black;"><img src="../assets/chat-icone.png"
+                            alt="Icone chat" width="20px" class="float-start">Mensagens do anúncio</a><br><br>
+                    <a href="anunciar.html" class="btn btn-primary">Editar anúncio</a>
+                    <a href="home-user.html" class="btn btn-danger">Excluir anúncio</a>
+                </div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
