--- a/pages/compras.html
+++ b/pages/compras.html
@@ -5,23 +5,148 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/erick.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../styles/arthur.css">
     <title>Compras</title>
+
+    <style>
+        body {
+            background: #e2eaef;
+            font-family: "Open Sans", sans-serif;
+        }
+
+        .vgr-cards .card {
+            display: flex;
+            flex-flow: wrap;
+            flex: 100%;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+
+        .vgr-cards .card .card-img-body {
+            flex: 1;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .vgr-cards .card .card-img {
+            height: 100%;
+            width: auto;
+            margin-left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .vgr-cards .card .card-body {
+            flex: 2;
+            padding: 0 0 0 1.25rem;
+        }
+
+        @media (max-width: 576px) {
+            .vgr-cards .card .card-body {
+                padding: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <h1 title="Compras">Compras</h1><hr>
-    <a href="home-user.html">Home User</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
-    <a href="perfil-user.html">Perfil do Usuário</a><hr>
+    <!-- Header -->
+    <header class="header">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="logo">
+                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+            </div>
 
-    <a href="anuncios.html">Meus anúncios</a><br><br>
-    <a href="compras.html">Compras</a><br>
-    <a href="rastreamento.html">Localizar entrega</a><br>
-    <a href="chat-compras.html">Abrir chat desta compra</a><br><br>
-    <a href="doacoes-atualizadas.html">Doações</a><hr>
-        
+            <div class="input-group mb-3 w-50">
+                <input type="text" class="form-control input-search" placeholder="Buscar...">
+                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+                </div>
+            </div>
+
+            <nav class="menu d-flex">
+                <ul class="menu-list d-flex justify-content-between align-items-center">
+                    <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+                    <li class="menu-item"><a href="doar.html">Doar</a></li>
+                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                                alt="Foto de perfil" width="30px"></a></li>
+                    <li class="carrinho">
+                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-cart4"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+    <div class="container">
+        <nav class="nav nav-tabs nav-justified mt-3 mb-3">
+            <a class="nav-link" href="anuncios.html" style="color: black;">Meus Anúncios</a>
+            <a class="nav-link active" href="compras.html">Compras</a>
+            <a class="nav-link" href="doacoes-atualizadas.html" style="color: black;">Doações</a>
+        </nav>
+        <div class="card mb-3 card-group vgr-cards">
+            <div class="card">
+                <div class="card-img-body" style="height: 167px">
+                    <img class="card-img" src="/assets/529638.png" alt="Card image cap">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Nome do anunciante</h4>
+                    <p class="card-text">Detalhes do produto</p>
+                    <p class="card-text">Data da compra: 14/02/2023</p>
+                    <div class="border border-dark d-inline-flex flex-column p-1 mb-2">
+                        <p class="m-1">Forma de pagamento:</p>
+                        <p class="m-1"><img src="../assets/cartao-credito.png" alt="Icone cartao de credito">Mastercard **** **** **** 1234</p>
+                    </div><br>
+                    <div class="d-inline-flex flex-row">
+                        <a href="chat-compras.html" class="mt-1 mb-1" style="color: black;"><img src="../assets/chat-icone.png"
+                            alt="Icone chat" width="20px" class="float-start me-1">Enviar mensagem ao anunciante</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img-body" style="height: 167px">
+                    <img class="card-img" src="/assets/529638.png" alt="Card image cap">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Nome do anunciante</h4>
+                    <p class="card-text">Detalhes do produto</p>
+                    <p class="card-text">Data da compra: 23/04/2022</p>
+                    <div class="border border-dark d-inline-flex flex-column p-1 mb-2">
+                        <p class="m-1">Forma de pagamento:</p>
+                        <p class="m-1"><img src="../assets/cartao-credito.png" alt="Icone cartao de credito">VISA **** **** **** 6789</p>
+                    </div><br>
+                    <div class="d-inline-flex flex-row">
+                        <a href="chat-compras.html" class="mt-1 mb-1" style="color: black;"><img src="../assets/chat-icone.png"
+                            alt="Icone chat" width="20px" class="float-start me-1">Enviar mensagem ao anunciante</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img-body" style="height: 167px">
+                    <img class="card-img" src="/assets/529638.png" alt="Card image cap">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Nome do anunciante</h4>
+                    <p class="card-text">Detalhes do produto</p>
+                    <p class="card-text">Data da compra: 12/01/2021</p>
+                    <div class="border border-dark d-inline-flex flex-column p-1 mb-2">
+                        <p class="m-1">Forma de pagamento:</p>
+                        <p class="m-1"><img src="../assets/cartao-credito.png" alt="Icone cartao de credito">VISA **** **** **** 6789</p>
+                    </div><br>
+                    <div class="d-inline-flex flex-row">
+                        <a href="chat-compras.html" class="mt-1 mb-1" style="color: black;"><img src="../assets/chat-icone.png"
+                            alt="Icone chat" width="20px" class="float-start me-1">Enviar mensagem ao anunciante</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
