--- a/pages/login.html
+++ b/pages/login.html
@@ -63,8 +63,8 @@
                 <a class="btn btn-primary btn-login text-uppercase fw-bold" href="home-user.html">Entrar</a>
               </div>
               <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
-                <label class="form-check-label" for="rememberPasswordCheck">
+                <input class="form-check-input mt-2" type="checkbox" value="" id="rememberPasswordCheck">
+                <label class="form-check-label mt-1" for="rememberPasswordCheck">
                   Relembrar senha
                 </label>
               </div>
