--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -132,28 +132,29 @@
 
 
     <div class="d-flex container justify-content-around">
-        <div class="border border-primary w-25">
+        <div class="w-25">
             <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil"
-                class="w-75 border border-primary">
+                class="w-75">
             <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
         </div>
-        <div class="border border-primary w-75 p-3">
+        <div class="w-75 p-3">
             <form>
                 <div class="form-group">
                     <label for="floatingNomeCompleto" class="mt-1 mb-1 mr-1">Nome Completo</label>
-                    <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Nome Completo">
+                    <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Ex.: João da Silva Santos">
                 </div>
                 <div class="form-group">
                     <label for="floatingEmail" class="mt-1 mb-1 mr-1">Email</label>
-                    <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                    <input type="email" class="form-control" id="floatingEmail" placeholder="Ex.: exemplo@gmail.com">
                 </div>
                 <div class="form-group">
                     <label for="floatingTelefone" class="mt-1 mb-1 mr-1">Telefone</label>
-                    <input type="text" class="form-control" id="floatingTelefone" placeholder="Telefone">
+                    <input type="text" class="form-control" id="floatingTelefone" placeholder="Ex.: (xx) xxxxx-xxxx">
                 </div>
                 <div class="form-group">
                     <label for="floatingGenero" class="mt-1 mb-1 mr-1">Gênero</label>
                     <select class="form-control form-control2" id="floatingGenero">
+                        <option selected>Selecione</option>
                         <option value="masculino">Masculino</option>
                         <option value="feminino">Feminino</option>
                         <option value="outro">Outro</option>
@@ -161,7 +162,7 @@
                 </div>
                 <div class="form-group">
                     <label for="floatingEndereco" class="mt-1 mb-1 mr-1">Endereço</label>
-                    <input type="text" class="form-control" id="floatingEndereco" placeholder="Endereço">
+                    <input type="text" class="form-control" id="floatingEndereco" placeholder="Ex.: Rua Almirante 56">
                 </div>
                 <div>
                     <input class="btn btn-primary mt-2 float-end" type="submit" value="Submit">
