--- a/pages/anunciar.html
+++ b/pages/anunciar.html
@@ -5,20 +5,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/arthur.css">
+    <link rel="stylesheet" href="../styles/erick.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Anunciar</title>
+
+    <style>
+        body {
+            background: #e2eaef;
+            font-family: "Open Sans", sans-serif;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 title="Anunciar">Anunciar</h1><hr>
-    <a href="home-user.html">Home User</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
-    <a href="perfil-user.html">Perfil do Usuário</a><hr>
+    <!-- Header -->
+    <header class="header">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="logo">
+                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+            </div>
 
-    <p>Campos do anúncio</p>
-    <a href="anuncios.html">Anunciar</a>
-        
+            <div class="input-group mb-3 w-50">
+                <input type="text" class="form-control input-search" placeholder="Buscar...">
+                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+                </div>
+            </div>
+
+            <nav class="menu d-flex">
+                <ul class="menu-list d-flex justify-content-between align-items-center">
+                    <li class="menu-item"><a href="index.html">Inicio</a></li>
+                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+                    <li class="menu-item"><a href="doar.html">Doar</a></li>
+                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                                alt="Foto de perfil" width="30px"></a></li>
+                    <li class="carrinho">
+                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-cart4"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+    <div class="container d-flex justify-content-center">
+        <div class="w-25 border p-3">
+            <img src="../assets/529638.png" alt="Imagem sapato" class="img-fluid rounded mx-auto d-block">
+        </div>
+        <div class="w-75 border p-1">
+            <div class="form-floating m-1">
+                <textarea class="form-control" placeholder="Nome do Produto" id="floatingNome"></textarea>
+                <label for="floatingNome">Nome do Produto</label>
+            </div>
+            <div class="form-floating m-1">
+                <textarea class="form-control" placeholder="informações sobre o produto" id="floatingInfo"
+                    style="height: 110px;"></textarea>
+                <label for="floatingInfo">Informações sobre o produto</label>
+            </div>
+            <div class="form-floating m-1">
+                <textarea class="form-control" placeholder="CEP" id="floatingCEP"></textarea>
+                <label for="floatingCEP">CEP</label>
+            </div>
+            <div class="form-floating m-1">
+                <textarea class="form-control" placeholder="Nome do Produto" id="floatingLoc"></textarea>
+                <label for="floatingLoc">Localização</label>
+            </div>
+            <div class="form-floating m-1">
+                <textarea class="form-control" placeholder="Nome do Produto" id="floatingNome"></textarea>
+                <label for="floatingNome">Nome do Produto</label>
+            </div>
+            <div class="input-group m-1">
+                <span class="input-group-text">R$</span>
+                <input type="text" class="form-control">
+                <span class="input-group-text">,00</span>
+              </div>
+            <a href="produto-anuncio-public+.html" class="float-end btn btn-primary m-3">Anunciar</a>
+        </div>
+        <div class="form">
+
+        </div>
+    </div>
+
 </body>
 
 </html>
