--- a/pages/produto-anuncio-public+.html
+++ b/pages/produto-anuncio-public+.html
@@ -53,8 +53,9 @@
 
 
     <div class="container">
-        <div class="d-flex justify-content-start w-100 text-center p-3">
+        <div class="d-flex align-items-center w-100 text-center p-3">
             <h3>Nome Anunciante</h3>
+            <a href="busca-filtragem-public.html" class="btn btn-info m-3">Visitar perfil</a>
         </div>
         <div class="d-flex justify-content-center">
             <div class="w-50 border p-2">
@@ -69,17 +70,17 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../assets/salto-1.png" class="d-block w-100" alt="...">
+                            <img src="../assets/salto-1.png" class="d-block w-75 rounded mx-auto" alt="foto 1">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/salto-2.png" class="d-block w-100" alt="...">
+                            <img src="../assets/salto-2.png" class="d-block w-75 rounded mx-auto" alt="foto 2">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/salto-3.png" class="d-block w-100" alt="...">
+                            <img src="../assets/salto-3.png" class="d-block w-75 rounded mx-auto" alt="foto 3">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
@@ -96,34 +97,29 @@
                     </button>
                 </div>
                 <div class="d-flex justify-content-center p-5">
-                    <h4>Gênero</h4>
-                    <img src="../assets/mulher-boneco.png" alt="Pe esquerdo" class="rounded" width="auto"
-                        height="120px">
-                    <h4>Classificação</h4>
-                    <img src="../assets/pe-esquerdo.jpg" alt="Pe esquerdo" class="rounded" width="120px" height="auto">
+                    <div class="pe-4">
+                        <h4>Gênero</h4>
+                        <img src="../assets/mulher-boneco.png" alt="Pe esquerdo" class="rounded" width="auto"
+                            height="120px">
+                    </div>
+                    <div class="ps-4">
+                        <h4>Classificação</h4>
+                        <img src="../assets/pe-esquerdo.png" alt="Pe esquerdo" class="rounded" width="120px" height="auto">
+                    </div>
                 </div>
             </div>
-            <div class="w-50 border p-2">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioE"
-                        value="option1">
-                    <label class="form-check-label" for="inlineRadioE"><img src="../assets/pe-esquerdo.jpg"
-                            alt="Pe esquerdo" class="img-fluid rounded mx-auto d-block" width="120px"
-                            height="auto"></label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioD"
-                        value="option2">
-                    <label class="form-check-label" for="inlineRadioD"><img src="../assets/pe-direito.jpg"
-                            alt="Pe direito" class="img-fluid rounded mx-auto d-block" width="120px"
-                            height="auto"></label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioED"
-                        value="option3">
-                    <label class="form-check-label" for="inlineRadioED"><img src="../assets/pe-esquerdo-direito.jpg"
-                            alt="Pe esquerdo e direito" class="img-fluid rounded mx-auto d-block" width="120px"
-                            height="auto"></label>
+            <div class="w-50 border border-dark d-flex justify-content-center p-2">
+                <div class="w-75 border p-1">
+                    <div class="d-flex ">
+                        <ul class="list-group list-group-flush p-2">
+                            <li class="list-group-item text-center h2">Ficha técnica</li>
+                            <li class="list-group-item h5">Tamanho: 39</li>
+                            <li class="list-group-item h5">Categoria: Salto alto</li>
+                            <li class="list-group-item h5">Formas de cuidado: Evitar ambientes úmidos</li>
+                            <li class="list-group-item h5">Preço: R$ 79,90</li>
+                        </ul>
+                    </div>
+                    <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Continuar comprando</a>
                 </div>
             </div>
         </div>
